crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-gra.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Morphology and grammatical relations tiers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: mor_dependent_tier, mor_tier_prefix, mor_contents, mor_content,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "mor_word, mor_pos, mor_lemma, mor_feature, mor_feature_value, mor_post_clitic,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "gra_dependent_tier, gra_tier_prefix, gra_contents, gra_relation,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "gra_index, gra_head, gra_relation_name, pipe",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "it",
                  "pos": "pron"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Fin",
                      "Ind",
                      "Pres",
                      "S3"
                    ],
                    "lemma": "be",
                    "pos": "aux"
                  }
                ]
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S1"
                  ],
                  "lemma": "I",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres"
                  ],
                  "lemma": "want",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur"
                  ],
                  "lemma": "cookie",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 4,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "AUX"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "OBJ"
              },
              {
                "head": 4,
                "index": 6,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "it's",
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "type": "word"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "cookies",
              "content": [
                {
                  "content": "cookies",
                  "type": "text"
                }
              ],
              "raw_text": "cookies",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Mommy",
                  "pos": "propn"
                }
              },
              {
                "main": {
                  "lemma": "will",
                  "pos": "aux"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf"
                  ],
                  "lemma": "get",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Acc",
                    "Plur"
                  ],
                  "lemma": "they",
                  "pos": "pron"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "AUX"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "OBJ"
              },
              {
                "head": 3,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "Mommy",
              "content": [
                {
                  "content": "Mommy",
                  "type": "text"
                }
              ],
              "raw_text": "Mommy",
              "type": "word"
            },
            {
              "cleaned_text": "will",
              "content": [
                {
                  "content": "will",
                  "type": "text"
                }
              ],
              "raw_text": "will",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            },
            {
              "cleaned_text": "them",
              "content": [
                {
                  "content": "them",
                  "type": "text"
                }
              ],
              "raw_text": "them",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
