crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__multi-tier-alignment.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Utterance with many dependent tiers: %mor, %gra, %pho, %com, %act, %cod, %gpx, %add",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: multi-tier alignment across all tier types",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Mommy",
                  "pos": "propn"
                }
              },
              {
                "main": {
                  "lemma": "look",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "at",
                  "pos": "prep"
                }
              },
              {
                "main": {
                  "lemma": "me",
                  "pos": "pron"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "VOCATIVE"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "CASE"
              },
              {
                "head": 2,
                "index": 4,
                "relation": "OBL"
              },
              {
                "head": 2,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        },
        {
          "data": {
            "items": [
              "mɑmi",
              "lʊk",
              "ʌt",
              "mi"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "CHI is excited and jumping",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "jumping up and down",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "waving arms wildly",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Gpx"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "MOT",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Add"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "$IMP $V",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Cod"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "Mommy",
              "content": [
                {
                  "content": "Mommy",
                  "type": "text"
                }
              ],
              "raw_text": "Mommy",
              "type": "word"
            },
            {
              "cleaned_text": "look",
              "content": [
                {
                  "content": "look",
                  "type": "text"
                }
              ],
              "raw_text": "look",
              "type": "word"
            },
            {
              "cleaned_text": "at",
              "content": [
                {
                  "content": "at",
                  "type": "text"
                }
              ],
              "raw_text": "at",
              "type": "word"
            },
            {
              "cleaned_text": "me",
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "okay",
                  "pos": "co"
                }
              },
              {
                "main": {
                  "lemma": "I",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "see",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "you",
                  "pos": "pron"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "DISCOURSE"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "OBJ"
              },
              {
                "head": 3,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "MOT is smiling",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "okay",
              "content": [
                {
                  "content": "okay",
                  "type": "text"
                }
              ],
              "raw_text": "okay",
              "type": "word"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "see",
              "content": [
                {
                  "content": "see",
                  "type": "text"
                }
              ],
              "raw_text": "see",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
